# linalglib

./: .gitignore  CMakeLists.txt  README.md
include/: matrix.h  vector.h
lib/: CMakeLists.txt
lib/include/: cmatrix.h  cvector.h  matrix.h  vector.h
lib/source/: cmatrix.cpp  cvector.cpp  matrix.cpp
main/: CMakeLists.txt
main/source/: main.cpp
test/: CMakeLists.txt
test/source/: main.cpp
